--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voltorb-flip",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.kennethpham.github.io/testReactApp",
+  "homepage": "https://www.kennethpham.github.io/VoltorbFlip",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
